--- a/login-registar-recuperar verificacion/views/ingresar.ejs
+++ b/login-registar-recuperar verificacion/views/ingresar.ejs
@@ -19,8 +19,8 @@
                </a>
             </div>
            <div class="divBotonesHeader">
-                <a href="ingresar.html" class="botonesHeader">Iniciar sesión</a>
-                <a href="./registrar.html" class="botonesHeader">Registrarse</a>
+                <a href="/ingresar" class="botonesHeader">Iniciar sesión</a>
+                <a href="/registrar" class="botonesHeader">Registrarse</a>
             </div>
         </div>
     </header>
