--- a/login-registar-recuperar verificacion/views/recuperacionContra.ejs
+++ b/login-registar-recuperar verificacion/views/recuperacionContra.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" href="./logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./headerStyle.css">
     <link rel="stylesheet" href="./recuperacionContra.css">
-    <script src="./recuperacionContra.js"></script>
+    <script src="../recuperacionContra.js"></script>
 </head>
 <body>
     <header class="header">
@@ -24,13 +24,11 @@
         </div>
     </header>
    <div class="divInputs">
-        <div class="divRecuperar">
+        <div id= "divprincipal" class="divRecuperar">
             <h2>Recuperar contraseña</h2>
-            <form>
-                <label for="email">Escribe tu email:</label>
-                <input type="email" id="email" name="email" required>
-                <button type="submit" id="recuperar">Recuperar contraseña</button>
-            </form>
+            <label for="email">Escribe tu email:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit" id="recuperar">Recuperar contraseña</button>
             <div id="failDiv"></div>
         </div>
    </div>
